--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.3.13",
+    "@nuxt/ui": "^2.17.0",
     "@nuxthub/core": "^0.7.0",
     "nuxt": "^3.12.2"
   },
