--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.3",
-    "@iconify-json/simple-icons": "^1.1.109",
+    "@iconify-json/mdi": "^1.1.67",
     "@nuxt/eslint": "^0.3.13",
     "@nuxt/ui": "^2.17.0",
     "@nuxthub/core": "^0.7.0",
